{{$NEXT}}

1.50   2018-08-01

- The %F strftime pattern incorrectly zero-padded numbers less than four
  digits. According to POSIX::strftime, this should output the year as-is
  without padding. Reported by Andy Lester. GH #83.


1.49   2018-05-20

- Updated the ppport.h with the latest version of Devel::PPPort. This fixes a
  compilation warning when compiling with 5.27.11. Reported by Jim
  Keenan. Fixed GH #81.


1.48   2018-03-26

- The last release would die if Sub::Util was not available, but this should
  just be an optional requirement. Fixed by Paul Howarth. Fixes GH #77. PR
  #78.


1.47   2018-03-25

- DateTime::Duration->multiply now only allows integer
  multipliers. Implemented by Dan Stewart. PR #73.

- Added is_last_day_of_quarter() and is_last_day_of_year()
  methods. Implemented by Dan Stewart. PR #72.

- When an exception was thrown while adding a duration the object could be
  left in a broken state, with the duration partially applied. Subsequent
  addition or subtraction would produce the wrong results. Reported by Pawel
  Pabian. GH #74.


1.46   2018-02-11

- Fixed the formatting for the CLDR "S" symbol. It could in some cases round
  _up_ to 1 instead of truncating a value. For example, the "SSS" symbol would
  format 999,999,999 nanoseconds as "1.000". Fixed by Gianni Ceccarelli. PR
  #71.


1.45    2017-12-26

- Added month_length(), quarter_length() and year_length()
  methods. Implemented by Dan Stewart. PR #70.


1.44   2017-08-20

- Added a stringify() method. This does exactly the same thing as
  stringification overloading does. GH #58.

- Added an is_last_day_of_month() method to indicate whether or not an object
  falls on the last day of its month. GH #60.


1.43   2017-05-29

- Added a small optimization for boolification overloading. Rather than
  relying on a fallback to stringification, we now return true directly, which
  is a little faster in cases like "if ($might_be_dt) { ... }".
